--- a/src/routes/HomeContent.scss
+++ b/src/routes/HomeContent.scss
@@ -1,10 +1,7 @@
 .home-content-container {
-    position         : fixed;
-    top              : 50%;
-    left             : 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform        : translate(-50%, -50%);
-    min-width        : 1200px;
+    max-width: 1200px;
+    padding  : 10px 100px;
+    margin   : 0 auto;
 }
 
 input {
