--- a/src/routes/HomeContent.scss
+++ b/src/routes/HomeContent.scss
@@ -4,9 +4,9 @@
     margin   : 0 auto;
 }
 
-input {
-    background-color: transparent;
-    color           : var(--color);
-    outline         : none;
-    cursor          : pointer;
-}
+// input {
+//     background-color: transparent;
+//     color           : var(--color);
+//     outline         : none;
+//     cursor          : pointer;
+// }
