--- a/src/components/Test/Test.scss
+++ b/src/components/Test/Test.scss
@@ -1,7 +1,7 @@
-.post-form-container {
-    .post-form-header {}
+.test-container {
+    .test-header {}
 
-    .post-form-body {}
+    .test-body {}
 
-    .post-form-footer {}
+    .test-footer {}
 }
