--- a/src/components/Calculator/Calculator.scss
+++ b/src/components/Calculator/Calculator.scss
@@ -7,8 +7,8 @@
         justify-content: center;
 
         .display {
-            height        : 70px;
-            width         : calc(50% - 10px);
+            height        : 100px;
+            width         : calc(100% - 10px);
             margin-left   : 10px;
             border        : 1px solid black;
             padding       : 0 10px;
@@ -26,7 +26,7 @@
                 float : right;
 
                 span {
-                    font-size: 15px;
+                    font-size: 30px;
                 }
             }
 
@@ -34,6 +34,9 @@
                 height: 60%;
                 float : right;
 
+                span {
+                    font-size: 30px;
+                }
 
                 // input {
                 //     border          : none;
@@ -55,7 +58,7 @@
         }
 
         .keys {
-            width            : 50%;
+            width            : 100%;
             display          : flex;
             flex-direction   : row;
             flex-wrap        : wrap;
@@ -67,6 +70,8 @@
                 margin-top   : 10px;
                 border-radius: 5px;
                 opacity      : 0.9;
+                height       : 50px;
+                font-size    : 30px;
 
                 &:hover {
                     opacity: 1;
